PROVA-39: Laad plugins Dynamisch op basis van naam #2
Compose filename to load in a OS independent way.